# scrapy_shop

./: .gitignore  README.md  main.py  pyproject.toml  shop需求.md
shop/: test.py
shop/shop/: settings.py
shop/shop/items/: DangDangItem.py
shop/shop/loaders/: BaseLoaders.py  DangDangLoaders.py
shop/shop/middlewares/: ShopCaseMiddleware.py  UserAgentMiddleware.py
shop/shop/pipelines/: DangDangPipeline.py  shopCasePipeline.py
shop/shop/spiders/: ali1688.py  dangdang.py
shop/shop/utils/: common.py
